--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <div class="food"></div>
         </div>
     </div>
+    <div class="control">
+        <button class="ctrlbtn" id="up">⇧</button>
+        <div class="downsec">
+        <button class="ctrlbtn" id="left">⇦</button>
+        <button class="ctrlbtn" id="down">⇩</button>
+        <button class="ctrlbtn" id="right">⇨</button>
+        </div>
+    </div>
     <button id="restartbtn" onclick="location.reload()">RESTART</button>
     <script src="script.js"></script>
 </body>
