--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
     </div>
     <div class="control">
-        <button class="ctrlbtn" id="up">⇧</button>
+        <button class="ctrlbtn" id="up" onclick="directionbtn(1)">▲</button>
         <div class="downsec">
-        <button class="ctrlbtn" id="left">⇦</button>
-        <button class="ctrlbtn" id="down">⇩</button>
-        <button class="ctrlbtn" id="right">⇨</button>
+        <button class="ctrlbtn" id="left" onclick="directionbtn(2)">◄</button>
+        <button class="ctrlbtn" id="down" onclick="directionbtn(3)">▼</button>
+        <button class="ctrlbtn" id="right" onclick="directionbtn(4)">►</button>
         </div>
     </div>
     <button id="restartbtn" onclick="location.reload()">RESTART</button>
